# multiplayer-snake-web

./: .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: go.mod  go.sum
backend/cmd/: main.go
backend/internal/handler/: auth_handler.go  chat.go  chat_ws.go  ws_handler.go
backend/internal/models/: friend.go  message.go  session.go  user.go
backend/internal/router/chat/: routes.go
backend/internal/store/: chat_hub.go  session.go  ws_hub.go
backend/pkg/request/: chat.go  ws_message.go
backend/pkg/response/: response.go
bot/: pyproject.toml
bot/src/: client.py  main.py  strategy.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: ChatRoom.vue  SnakeGame.vue
frontend/src/services/: websocket.ts
