[project]
name = "multiplayer-snake-web-bot"
version = "0.1.0"
description = "Multiplayer Snake AI Bot(fake ai)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
